refactor: class into smaller pieces

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 
 <body>
     <canvas id="my-canvas" width="480" height="320"></canvas>
+    <button id="start-button">Start Game</button>
+
 </body>
 
 </html>
