feat: add pause button, calculate the paddle collision and refactoring ball constructor

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
     <canvas id="my-canvas" width="480" height="320"></canvas>
     <button id="start-button">Start Game</button>
-
+    <button id="pause-button">Pause Game</button>
 </body>
 
 </html>
